# NetTool

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  build.bat  main.rc  prebuild.py  readme.md  readme.txt  readme_zh_CN.md  resource.h  zh_dict.json
Core/: CMakeLists.txt  FileStorage.cpp  FileStorage.h  HexUtil.h  MulticastTask.cpp  MulticastTask.h  NetUtil.h  NetworkConfig.cpp  NetworkConfig.h  NetworkTask.cpp  NetworkTask.h  NetworkTaskManager.cpp  NetworkTaskManager.h  Result.h  TcpClientTask.cpp  TcpClientTask.h  TcpServerTask.cpp  TcpServerTask.h  UdpTask.cpp  UdpTask.h  socket_timeout_option.h
Res/: light.css  nettool.qrc  nettool_zh_CN.qm
Src/: App.cpp  App.h  AppSettingsDialog.cpp  AppSettingsDialog.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  CommonUi.h  ConfigWidget.cpp  ConfigWidget.h  Form.cpp  Form.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  MulticastConfigWidget.cpp  MulticastConfigWidget.h  MulticastTask.cpp  MulticastTask.h  NetUtil.h  NetwokTaskFactory.cpp  NetwokTaskFactory.h  NetworkConfig.cpp  NetworkConfig.h  NetworkTask.h  PlaceholderWidget.h  RecvWidget.cpp  RecvWidget.h  RemoteHostWidget.cpp  RemoteHostWidget.h  SendFileDialog.cpp  SendFileDialog.h  SendWidget.cpp  SendWidget.h  SideBar.cpp  SideBar.h  TcpClientTask.cpp  TcpClientTask.h  TcpServerTask.cpp  (+8 more)
Test/: CMakeLists.txt  TestHexUtil.cpp  TestTcpServer.cpp
code/: App.cpp  App.h  ExampleAppConsole.h  LogWidget.h  MulticastTask.cpp  MulticastTask.h  NetworkConfig.h  NetworkConfigIO.h  NetworkTask.cpp  NetworkTask.h  ProtocolConfigWidget.cpp  ProtocolConfigWidget.h  RecvWidget.h  SendWidget.h  SimpleLayout.h  TcpClientTask.cpp  TcpClientTask.h  TcpServerTask.cpp  TcpServerTask.h  UdpTask.cpp  UdpTask.h  main.cpp
res/: nettool.rc  resource.h
